--- a/src/app/edit/produto-edit/produto-edit.component.html
+++ b/src/app/edit/produto-edit/produto-edit.component.html
@@ -1,47 +1,129 @@
-<div class="container my-5">
-    <div class="row">
-        <div class="col-md-12">
-            <h1 class="text-center text-secondary">Atualizar Produto</h1>
+<div class="container fredoka">
+    <div class="container-fluid">
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-02 mt-5 d-flex align-content-center">
+          <h1 class="text-center">Adicionar Produtos</h1>
         </div>
-    </div>
-    <div class="row d-flex justify-content-center">
-        <div class="col-md-6">
-            <div class="form-group">
-                <label for="titulo">nome</label>
-                <input [(ngModel)]="produto.nome" type="text" class="form-control" id="titulo"
-                    placeholder="nome do produto">
-            </div>
-            <div class="form-group">
-                <label for="texto">Descrição</label>
-                <textarea [(ngModel)]="produto.descricao" name="texto" class="form-control" id="texto"
-                    rows="3"></textarea>
-            </div>
-            <div class="form-group">
-                <input [(ngModel)]="produto.preco" type="text" class="form-control" id="titulo" placeholder="preco">
-            </div>
-            <div class="form-group">
+      </div>
 
-                <input [(ngModel)]="produto.tipoProduto" type="text" class="form-control" id="titulo"
-                    placeholder="tipo">
+      <div class="row d-flex justify-content-center ml-1">
+        <div class="col-md-10">
+          <p class="text-center mt-2 mb-3">
+            cadastre mais produtos ao seu restaurante!
+          </p>
+
+          <div class="form-row">
+            <div class="col mb-2">
+              <label for="nome"></label>
+              <input
+                [(ngModel)]="produto.nome"
+                type="text"
+                class="form-control"
+                name="nome"
+                id="nome"
+                placeholder="Qual seu produto?"
+              />
             </div>
-            <div class="form-group">
-                <label for="titulo">nome</label>
-                <input [(ngModel)]="produto.estoque" type="text" class="form-control" id="titulo" placeholder="estoque">
+          </div>
+
+          <div class="form-row">
+            <div class="col">
+              <label for="descricao"></label>
+              <textarea
+                [(ngModel)]="produto.descricao"
+                type="text"
+                class="form-control"
+                name="descricao"
+                id="descricao"
+                rows="3"
+                placeholder="O que contem no seu produto? Descreve aí!"
+              >
+              </textarea>
             </div>
-            <div class="form-group">
-                <label for="titulo">nome</label>
-                <input [(ngModel)]="produto.foto" type="text" class="form-control" id="titulo" placeholder="estoque">
+          </div>
+
+          <div class="form-row">
+            <div class="col mb-2">
+              <label for="estoque"></label>
+              <input
+                [(ngModel)]="produto.estoque"
+                type="number"
+                class="form-control"
+                name="estoque"
+                id="estoque"
+                placeholder="Informe seu estoque:"
+              />
             </div>
-            <div class="form-group">
-                <select class="form-control" name="categoria" id="categoria" [(ngModel)]="idCategoria"
+
+            <div class="col">
+              <label for="tipoProduto"></label>
+              <select
+              [(ngModel)]="produto.tipoProduto"
+                type="text"
+                class="form-control"
+                name="tipoProduto"
+                id="tipoProduto"
+              >
+                <option>Tipo de Produto</option>
+                <option value="vegano">Vegano</option>
+                <option value="vegetariano">Vegetariano</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="form-row">
+              <div class="col-md-3 mb-3">
+                <label for="preco"></label>
+                <input
+                  [(ngModel)]="produto.preco"
+                  type="number"
+                  class="form-control"
+                  name="preco"
+                  id="preco"
+                  placeholder="Qual o preço?">
+              </div>
+
+                <div class="col-md-3">
+                  <label for="categoria"></label>
+                  <select
+                    type="text"
+                    class="form-control"
+                    name="categoria"
+                    id="categoria"
+                    [(ngModel)]="idCategoria"
                     (change)="findByIdCategoria()">
-                    <option *ngFor="let item of listaCategoria" value="{{item.id}}">{{item.nome}}</option>
-                </select>
-            </div>
-            <div class="d-flex justify-content-center">
-                <button class="btn btn-danger mr-4" routerLink="/restaurante">Cancelar</button>
-                <button class="btn btn-success" (click)="atualizar()">Atualizar</button>
-            </div>
+                    <option
+                      *ngFor="let item of listaCategoria"
+                      value="{{item.id}}">
+                      {{item.nome}}
+                    </option>
+                  </select>
+                </div>
+
+                <div class="col-md-3">
+                  <label for="foto"></label>
+                  <input
+                  [(ngModel)]="produto.foto"
+                    class="form-control"
+                    type="text"
+                    name="foto"
+                    id="foto"
+                    placeholder="Insira o link da foto:">
+                </div>
+              </div>
+          </div>
+
         </div>
+      </div>
     </div>
-</div>
+
+
+  <div class="d-flex justify-content-center mt-5 mb-5">
+    <button type="submit" class="btn btn-outline-secondary mr-4" routerLink="/inicio">
+      Cancelar
+    </button>
+    <button class="btn btn-outline-success" (click)="atualizar()">
+      Atualizar
+    </button>
+  </div>
