--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -14,7 +14,7 @@
 <!-- LISTA DE ITENS -->
       <ul class="navbar-nav d-flex align-items-center ml-auto">
         <li class="nav-item active p-1 fredoka">
-        <a class="nav-verde" href="#">INÍCIO<span class="sr-only">(página atual)</span></a>
+        <a class="nav-verde" href="#" routerLink='/inicio'>INÍCIO<span class="sr-only">(página atual)</span></a>
           </li>
           <li class="nav-item p-1 fredoka">
             <a class="nav-verde" href="#" routerLink='/restaurantes'>RESTAURANTES</a>
