--- a/src/app/restaurantes/restaurantes.component.css
+++ b/src/app/restaurantes/restaurantes.component.css
@@ -25,9 +25,14 @@ p {
 }
 
 .card {
-  color: var(--laranjaPadrao);
+  color: var(--roxoPadrao);
   border:solid 3px;
   border-color: var(--laranjaClaro);
   border-radius: 0.50rem;
   transition: 0.7s ease;
+}
+
+.nav-link{
+  background-color: var(--marromClaro);
+  color: white;
 }
