--- a/src/app/delete/produto-delete/produto-delete.component.html
+++ b/src/app/delete/produto-delete/produto-delete.component.html
@@ -16,15 +16,15 @@
                 <div class="card text-center" >
                 <div class="card-body">
                   <h5 class="card-title">{{produto.nome}}</h5>
-                  <small class="text-muted">Descrição {{produto.descricao}} </small>
-                  <p class="card-text">{{produto.preco}} reais</p>
+                  <small class="text-muted">{{produto.descricao}} </small>
+                  <p class="card-text">R$ {{produto.preco}},00</p>
                   <p class="card-text"></p>
                 </div>
         </div>
     </div>
 
-    
-    
+
+
 </div>
 <div class="row mt-5">
     <div class="col-md-12 d-flex justify-content-center">
