--- a/src/app/edit/categoria-edit/categoria-edit.component.html
+++ b/src/app/edit/categoria-edit/categoria-edit.component.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center">
-                <button class="btn btn-danger mr-4" routerLink="/categoria">Cancelar</button>
+                <button class="btn btn-danger mr-4" routerLink="/inicio">Cancelar</button>
                 <button class="btn btn-success" (click)="atualizar()">Atualizar</button>
             </div>
         </div>
