--- a/src/app/edit/produto-edit/produto-edit.component.html
+++ b/src/app/edit/produto-edit/produto-edit.component.html
@@ -2,15 +2,13 @@
     <div class="container-fluid">
       <div class="row d-flex justify-content-center">
         <div class="col-md-02 mt-5 d-flex align-content-center">
-          <h1 class="text-center">Adicionar Produtos</h1>
+          <h1 class="text-center">Atualizar Produto</h1>
         </div>
       </div>
 
       <div class="row d-flex justify-content-center ml-1">
         <div class="col-md-10">
-          <p class="text-center mt-2 mb-3">
-            cadastre mais produtos ao seu restaurante!
-          </p>
+          
 
           <div class="form-row">
             <div class="col mb-2">
