--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -52,3 +52,11 @@ a{
   height: 80px;
   width: 80px;
 }
+.fixed-top {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+}
+
