área do usuário

--- a/src/app/produto/produto.component.html
+++ b/src/app/produto/produto.component.html
@@ -56,7 +56,7 @@
           </div>
 
           <div class="col">
-            <label for="tipoProduto"></label>
+            <label for="tipoProduto">Vegano/Vegetariano</label>
             <select
             [(ngModel)]="produto.tipoProduto"
               type="text"
@@ -64,7 +64,7 @@
               name="tipoProduto"
               id="tipoProduto"
             >
-              <option>Tipo de Produto</option>
+
               <option value="vegano">Vegano</option>
               <option value="vegetariano">Vegetariano</option>
             </select>
