--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -52,3 +52,27 @@ a{
   height: 80px;
   width: 80px;
 }
+
+.button-create{
+  background-color: var(--verdeClaro);
+  color: var(--marromPadrao);
+  border: 0;
+  text-decoration: none;
+  border-radius: 6px;
+  padding: 6px 15px;
+  font-size: 1.2em bolder;
+}
+
+.button-enter{
+  background-color: var(--marromPadrao);
+  color: var(--verdeClaro);
+  border: 0;
+  text-decoration: none;
+  border-radius: 6px;
+  padding: 6px 15px;
+  font-size: 1.2em bolder;
+}
+
+.button-enter:hover{
+  background-color: #57462a;
+}
