--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -27,31 +27,33 @@
           </li>
           </ul>
 <!-- USUÁRIO ENTRAR / INFO DO USUÁRIO -->
-      <!-- <ul class="navbar-nav d-flex ml-auto align-items-center"> -->
+
+      <!-- CASO O USUÁRIO NÃO ESTEJA LOGADO -->
         <ul class="navbar-nav d-flex ml-auto align-items-center" >
           <div class="col-6 d-flex justify-content-center m-0 p-0" *ngIf="!auth.logado()">
               <div class="d-flex align-items-center">
                 <div class="p-0 mr-2">
-                  <button class=" ml-2" routerLink="/login">Entrar</button>
+                  <button class="button-enter ml-2" routerLink="/login">Entrar</button>
                 </div>
                 <div class=" mr-2">
                 </div>
                 <div class="p-0">
-                  <button class=" btn-block mr-5" routerLink="/login">Criar conta</button>
+                  <button class="button-create btn-block mr-5" routerLink="/login">Criar conta</button>
                 </div>
               </div>
           </div>
         </ul>
-      <!-- </ul> -->
 
+        <!-- CASO O USUÁRIO ESTEJA LOGADO -->
       <div class="col-2 d-flex justify-content-center align-items-center p-0" *ngIf="auth.logado()">
         <a class="nav-conta dropdown-toggle fs-16" href="#" id="navbarDropdown" role="button"
           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <img src="https://i.imgur.com/1ENRWbA.jpg" onerror="this.src = 'assets/img/logo.jpg'"
-            alt="imagem do usuario" class="rounded-circle mr-2" width="35">
+          <!-- VERIFICAÇÃO PARA VER SE TEM FOTO OU NÃO -->
+          <img src="{{foto}}" onerror="this.src = 'https://i.imgur.com/tnlziD8.png' " alt="Imagem do usuário"
+          class="rounded-circle img-fluid" width="50">
               </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#"routerLink="/login">MEUS DADOS</a>
+          <a [routerLink]="['/usuario-edit', usuario.id]"  class="dropdown-item" >MEUS DADOS</a>
           <div class="dropdown-divider"></div>
           <a (click)="sair()" class="dropdown-item" href="#"routerLink="/login">SAIR</a>
       </div>
