--- a/src/app/restaurantes/restaurantes.component.html
+++ b/src/app/restaurantes/restaurantes.component.html
@@ -3,150 +3,232 @@
   <div class="row w-100">
     <div class="col-md-12 espaco">
       <owl-carousel-o [options]="customOptions">
-        <ng-template carouselSlide><img src="https://i.imgur.com/IK8uiBL.jpg" alt="" class="espaco"></ng-template>
-        <ng-template carouselSlide><img src="https://i.imgur.com/88YqDvD.jpg" alt="" class="espaco" ></ng-template>
-        <ng-template carouselSlide><img src="https://i.imgur.com/nebw0qJ.jpg" alt="" class="espaco"></ng-template>
+        <ng-template carouselSlide
+          ><img src="https://i.imgur.com/IK8uiBL.jpg" alt="" class="espaco"
+        /></ng-template>
+        <ng-template carouselSlide
+          ><img src="https://i.imgur.com/88YqDvD.jpg" alt="" class="espaco"
+        /></ng-template>
+        <ng-template carouselSlide
+          ><img src="https://i.imgur.com/nebw0qJ.jpg" alt="" class="espaco"
+        /></ng-template>
       </owl-carousel-o>
     </div>
   </div>
 </div>
 <!--                               /! CARROSSEL INICIAL                           -->
 
-
-      <!--                              ! BARRA DE PESQUISA                                       -->
-      <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-          <div class="row d-flex justify-content-center  align-items-center">
-            <div class="col-md-5">
-              <div class="form-group mb-5 mt-5">
-                <input [(ngModel)]="nomeProduto" type="text" class="form-control" id="tituloPesquisa" placeholder="Digite para pesquisar"
-                (keyup)="findByTituloProduto()">
-              </div>
-            </div>
-            <div class="col-md-2 mb-2 mt-2 text-end">
-              <img src="https://i.imgur.com/A1ddOPs.png" alt="" class="img-fluid">
-            </div>
-          </div>
+<!--                              ! BARRA DE PESQUISA                                       -->
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <div class="row d-flex justify-content-center align-items-center">
+      <div class="col-md-5">
+        <div class="form-group mb-5 mt-5">
+          <input
+            [(ngModel)]="nomeProduto"
+            type="text"
+            class="form-control"
+            id="tituloPesquisa"
+            placeholder="Digite para pesquisar"
+            (keyup)="findByTituloProduto()"
+          />
         </div>
       </div>
-    <!--                              /! BARRA DE PESQUISA                                       -->
+      <div class="col-md-2 mb-2 mt-2 text-end">
+        <img src="https://i.imgur.com/A1ddOPs.png" alt="" class="img-fluid" />
+      </div>
+    </div>
+  </div>
+</div>
+<!--                              /! BARRA DE PESQUISA                                       -->
 
 <!--                              !FILTRAGEM DE PRODUTOS                                   -->
 
-
-                    <!--todo: Postagens: LINKS-->
+<!--todo: Postagens: LINKS-->
 <div class="container d-flex justify-content-center mb-5" id="produto">
+  <div class="nav nav-tabs d-flex form-group" id="nav-tab" role="tablist">
+    <button
+      class="nav-item nav-link active"
+      id="todosProdutos-tab"
+      data-toggle="tab"
+      href="#todosProdutos"
+      role="tab"
+      aria-controls="todosProdutos"
+      aria-selected="true"
+    >
+      Todos os produtos
+    </button>
 
-    <div class="nav nav-tabs d-flex form-group" id="nav-tab" role="tablist">
-      <button class="nav-item nav-link active" id="todosProdutos-tab" data-toggle="tab" href="#todosProdutos" role="tab" aria-controls="todosProdutos" aria-selected="true">Todos os produtos</button>
+    <!-- todo: aqui tem que por sobre restaurante -->
+    <button
+      (click)="getAllUsuarios()"
+      class="nav-item nav-link"
+      id="meusProdutos-tab"
+      data-toggle="tab"
+      href="#meusProdutos"
+      role="tab"
+      aria-controls="meusProdutos"
+      aria-selected="false"
+    >
+      Produtos por Restaurantes
+    </button>
 
-                <!-- todo: aqui tem que por sobre restaurante -->
-      <button (click)='getAllUsuarios()' class="nav-item nav-link" id="meusProdutos-tab" data-toggle="tab" href="#meusProdutos" role="tab" aria-controls="meusProdutos" aria-selected="false">Produtos por Restaurantes</button>
-
-                <!-- todo: fim aqui tem que por sobre restaurante -->
-      <button class="nav-item nav-link" id="produtoCategoria-tab" data-toggle="tab" href="#produtoCategoria" role="tab" aria-controls="produtoCategoria" aria-selected="false">Produtos por Categoria</button>
-    </div>
+    <!-- todo: fim aqui tem que por sobre restaurante -->
+    <button
+      class="nav-item nav-link"
+      id="produtoCategoria-tab"
+      data-toggle="tab"
+      href="#produtoCategoria"
+      role="tab"
+      aria-controls="produtoCategoria"
+      aria-selected="false"
+    >
+      Produtos por Categoria
+    </button>
   </div>
-
-
+</div>
 
 <!--                              /!FILTRAGEM DE PRODUTOS                                   -->
 
-
-
 <!--                              ! CARDS RESTAURANTES                                          -->
-<div class="tab-content mt-4 container d-flex justify-content-center" id="nav-tabContent">
-<!--                              ! TODOS OS PRODUTOS
+<div
+  class="tab-content mt-4 container d-flex justify-content-center"
+  id="nav-tabContent"
+>
+  <!--                              ! TODOS OS PRODUTOS
 
     <!--todo: TODAS OS PRODUTOS-->
 
-    <!-- <div class="container"> -->
-      <div class="tab-pane fade show active" id="todosProdutos" role="tabpanel" aria-labelledby="todosProdutos-tab">
+  <!-- <div class="container"> -->
+  <div
+    class="tab-pane fade show active"
+    id="todosProdutos"
+    role="tabpanel"
+    aria-labelledby="todosProdutos-tab"
+  >
+    <div class="card-columns" style="width: 70rem; height: 300rem">
+      <div class="card text-center" *ngFor="let item of listaProdutos">
+        <img
+          src="{{ item.foto }}"
+          class="card-img-top img-fluid"
+          alt="Imagem do produto"
+        />
+        <div class="card-body">
+          <h5 class="card-title m-0 mt-3">{{ item.nome }}</h5>
+          <p class="card-text">
+            <small class="text-muted">{{ item.usuario.nome }}</small>
+          </p>
+          <p class="card-text mt-2">{{ item.descricao }}</p>
+          <p class="card-text mt-2">
+            <small class="text-muted">{{ item.categoria.nome }}</small>
+          </p>
+          <p class="card-text mt-3">R$: {{ item.preco }},00</p>
 
-        <div class="card-columns">
-          <div class="card text-center" *ngFor="let item of listaProdutos">
-            <img src="{{item.foto}}" class="card-img-top img-fluid"  alt="Imagem do produto">
-            <div class="card-body">
-              <h5 class="card-title m-0 mt-3">{{item.nome}}</h5>
-              <p class="card-text"><small class="text-muted">{{item.usuario.nome}}</small></p>
-              <p class="card-text mt-2">{{item.descricao}}</p>
-              <p class="card-text mt-2"><small class="text-muted">{{item.categoria.nome}}</small></p>
-              <p class="card-text mt-3">R$: {{item.preco}},00</p>
-
-              <!-- <a [routerLink]="['/produto-edit', item.id]" class="btn btn-outline-secondary mr-3 mt-3">Editar</a>
+          <!-- <a [routerLink]="['/produto-edit', item.id]" class="btn btn-outline-secondary mr-3 mt-3">Editar</a>
               <a [routerLink]="['/produto-delete', item.id]" class="btn btn-outline-danger mr-3 mt-3">Apagar</a> -->
 
-              <a class="btn mt-3 w-100" (click)="getProdById(item.id)"><i class="fa fa-cart-plus" aria-hidden="true"></i></a>
-
-            </div>
-
-          </div>
+          <a class="btn mt-3 w-100" (click)="getProdById(item.id)"
+            ><i class="fa fa-cart-plus" aria-hidden="true"></i
+          ></a>
         </div>
-      </div>
-
-
-
-
-
-      <!--                              ! POR RESTAURANTE             -->
-
-      <div class="tab-pane fade show active container" id="meusProdutos" role="tabpanel" aria-labelledby="meusProdutos-tab">
-
-
-            <!-- <div class="row bg-danger mb-1" *ngFor="let usuario of listaUsuarios">
-              <div class="col-md-3 bg-info" *ngIf="usuario.tipoUsuario === 'vendedor'">
-                <img src="{{usuario.foto}}" alt="Logo do restaurante" width="200px">
-              </div>
-            </div> -->
-
-
-                                  <!-- GERADOR DE CARDS! -->
-      <div class="card-columns" *ngFor="let usuario of listaUsuarios">
-        <div class="card text-center" *ngFor="let item of usuario.produto" >
-          <img src="{{usuario.foto}}"  class="mt-3" width="70px"  alt="Imagem do produto">
-          <div class="card-body" *ngIf="usuario.tipoUsuario === 'vendedor'">
-            <img src="{{item.foto}}" class="card-img-top img-fluid"  alt="Imagem do produto">
-            <h5 class="card-title m-3">{{item.nome}}</h5>
-            <p class="card-text mt-2">{{item.descricao}}</p>
-            <p class="card-text"><small class="text-muted">{{item.categoria.nome}}</small></p>
-            <p class="card-text mt-2">R$: {{item.preco}},00</p>
-            <a class="btn mt-3 w-100" (click)="getProdById(item.id)"><i class="fa fa-cart-plus" aria-hidden="true"></i></a>
-          </div>
       </div>
     </div>
-      </div>
-    <!--                              ! /POR RESTAURANTE                                          -->
+  </div>
 
+  <!--                              ! POR RESTAURANTE             -->
 
+  <div
+    class="tab-pane fade show active container"
+    id="meusProdutos"
+    role="tabpanel"
+    aria-labelledby="meusProdutos-tab"
+  >
+    <!-- GERADOR DE CARDS! -->
 
-    <!--                              ! POR CATEGORIA                                          -->
-
-        <!--todo: POSTAGENS POR Categoria-->
-
-    <div class="tab-pane fade container" id="produtoCategoria" role="tabpanel" aria-labelledby="produtoCategoria-tab">
-
-      <div *ngFor="let categoria of listaCategorias">
-
-        <div class="row d-flex justify-content-center">
-          <div class="col-md-8 d-flex justify-content-center mt-3 mb-3">
-
-        <img src="{{categoria.foto}}" alt="Imagem da Categoria"  width="200px" >
-          </div>
+    <div style="width: 70rem" *ngFor="let usuario of listaUsuarios">
+      <div
+        *ngIf="usuario.tipoUsuario === 'vendedor'"
+        class="row d-flex justify-content-center"
+      >
+        <div
+          *ngIf="usuario.produto.length >= 1"
+          class="col-md-8 d-flex justify-content-center mt-5 mb-5"
+        >
+          <h1>{{ usuario.nome }}</h1>
         </div>
+      </div>
 
-
-        <div class="card-columns" >
-          <div class="card text-center" *ngFor="let item of categoria.produto">
-            <div class="card-body">
-              <img src="{{item.foto}}" class="card-img-top img-fluid"  alt="Imagem do produto">
-              <h5 class="card-title m-0 mt-3">{{item.nome}}</h5>
-              <p class="card-text"><small class="text-muted">{{item.usuario.nome}}</small></p>
-              <p class="card-text mt-2">{{item.descricao}}</p>
-              <p class="card-text mt-2">R$: {{item.preco}},00</p>
-              <a class="btn mt-3 w-100" (click)="getProdById(item.id)"><i class="fa fa-cart-plus" aria-hidden="true"></i></a>
-            </div>
+      <div class="card-columns">
+        <div class="card text-center" *ngFor="let item of usuario.produto">
+          <img
+            src="{{ usuario.foto }}"
+            class="mt-3"
+            width="70px"
+            alt="Imagem do produto"
+          />
+          <div class="card-body">
+            <img
+              src="{{ item.foto }}"
+              class="card-img-top img-fluid"
+              alt="Imagem do produto"
+            />
+            <h5 class="card-title m-3">{{ item.nome }}</h5>
+            <p class="card-text mt-2">{{ item.descricao }}</p>
+            <p class="card-text">
+              <small class="text-muted">{{ item.categoria.nome }}</small>
+            </p>
+            <p class="card-text mt-2">R$: {{ item.preco }},00</p>
+            <a class="btn mt-3 w-100" (click)="getProdById(item.id)"
+              ><i class="fa fa-cart-plus" aria-hidden="true"></i
+            ></a>
           </div>
         </div>
       </div>
     </div>
+  </div>
+  <!--                              ! /POR RESTAURANTE                                          -->
+
+  <!--                              ! POR CATEGORIA                                          -->
+
+  <!--todo: POSTAGENS POR Categoria-->
+
+  <div
+    class="tab-pane fade container"
+    id="produtoCategoria"
+    role="tabpanel"
+    aria-labelledby="produtoCategoria-tab"
+  >
+    <div *ngFor="let categoria of listaCategorias">
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-8 d-flex justify-content-center mt-3 mb-3">
+          <img
+            src="{{ categoria.foto }}"
+            alt="Imagem da Categoria"
+            width="200px"
+          />
+        </div>
+      </div>
+
+      <div class="card-columns" style="width: 70rem">
+        <div class="card text-center" *ngFor="let item of categoria.produto">
+          <div class="card-body">
+            <img
+              src="{{ item.foto }}"
+              class="card-img-top img-fluid"
+              alt="Imagem do produto"
+            />
+            <h5 class="card-title m-0 mt-3">{{ item.nome }}</h5>
+            <p class="card-text">
+              <small class="text-muted">{{ item.usuario.nome }}</small>
+            </p>
+            <p class="card-text mt-2">{{ item.descricao }}</p>
+            <p class="card-text mt-2">R$: {{ item.preco }},00</p>
+            <a class="btn mt-3 w-100" (click)="getProdById(item.id)"
+              ><i class="fa fa-cart-plus" aria-hidden="true"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
