--- a/src/app/carrinho/carrinho.component.html
+++ b/src/app/carrinho/carrinho.component.html
@@ -11,7 +11,7 @@
             </div>
             <div class="col-6 d-flex flex-column justify-content-center">
               <div class="row">
-                <h5 class=''>{{item.nome}}</h5>
+                <h5 class=''> {{item.nome}}</h5>
               </div>
             </div>
             <div class="col-3">
@@ -32,7 +32,7 @@
           <div class="row">
             <div class="col-12">
               <div class="row">
-                <button class="btn btn-verde btn-block">Finalizar compra</button>
+                <button class="btn btn-verde btn-block" (click)="enviar()">Finalizar compra</button>
               </div>
             </div>
           </div>
