--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -51,11 +51,14 @@
         <a class="nav-conta dropdown-toggle fs-16" href="#" id="navbarDropdown" role="button"
           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <!-- VERIFICAÇÃO PARA VER SE TEM FOTO OU NÃO -->
-          <img src="{{foto}}" onerror="this.src = 'https://i.imgur.com/tnlziD8.png' " alt="Imagem do usuário"
+          <img src="{{usuario.foto}}" onerror="this.src = 'https://i.imgur.com/tnlziD8.png' " alt="Imagem do usuário"
           class="rounded-circle img-fluid" width="50">
               </a>
+              <i class="fa fa-shopping-cart " aria-hidden="true" routerLink="/carrinho"></i>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a [routerLink]="['/usuario-edit', usuario.id]"  class="dropdown-item" >MEUS DADOS</a>
+          <div class="dropdown-divider"></div>
+          <a routerLink="/produto"  class="dropdown-item">CADASTRAR PRODUTO</a>
           <div class="dropdown-divider"></div>
           <a (click)="sair()" class="dropdown-item" href="#"routerLink="/login">SAIR</a>
       </div>
